--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint-fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint-staged": "npx lint-staged",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "ahooks": "^3.7.8",
+    "antd": "^5.8.6",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.2",
+    "echarts": "^5.4.3",
+    "nprogress": "^0.2.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -32,11 +42,17 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "sass": "^1.66.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --cache"
+    ]
   }
 }
