--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "singleQuote": true,
   "quoteProps": "consistent",
   "bracketSameLine": false,
-  "endOfLine": "crlf"
+  "endOfLine": "crlf",
+  "jsxSingleQuote": false
 }
