--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "nprogress": "^0.2.0",
     "query-string": "^8.1.0",
