--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-stickynode": "^4.1.0"
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.7",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-stickynode": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
