--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "ahooks": "^3.7.8",
