--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.6",
+    "@designable/formily-antd": "^1.0.0-beta.45",
     "@reduxjs/toolkit": "^1.9.5",
     "ahooks": "^3.7.8",
     "antd": "^5.8.6",
