--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.6",
-    "@designable/formily-antd": "^1.0.0-beta.45",
+    "@formily/antd-v5": "^1.1.7",
+    "@formily/core": "^2.3.0",
+    "@formily/react": "^2.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "ahooks": "^3.7.8",
     "antd": "^5.8.6",
@@ -64,5 +66,11 @@
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix --cache"
     ]
+  },
+  "overrides": {
+    "@ant-design/charts": {
+      "antd": "^5.8.6",
+      "@ant-design/icons": "^5.2.6"
+    }
   }
 }
